RabbitManager -Move Bunnies in Batch -Improved Rabbit replacing -Go back after Freeing inventory